--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -18,46 +18,15 @@ http {
         server 127.0.0.1:8003;
     }
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
     access_log /var/log/nginx/access.log;
-
-    keepalive_timeout 65;
-    proxy_read_timeout 200;
+    types_hash_max_size 2048;    
     sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
     gzip on;
-    gzip_min_length 1000;
-    gzip_proxied any;
-    gzip_types text/plain text/html text/css text/xml
-               application/x-javascript application/xml
-               application/atom+xml text/javascript;
-
-    # Only retry if there was a communication error, not a timeout
-    # on the Tornado server (to avoid propagating "queries of death"
-    # to all frontends)
-    proxy_next_upstream error;
 
     server {
         listen 80;
-
-        # Allow file uploads
-        client_max_body_size 50M;
-
-        location static/ {
-            root /srv/www/domain.com/tornado-linode/;
-            if ($query_string) {
-                expires max;
-            }
-        }
-        location = /favicon.ico {
-            rewrite (.*) /static/favicon.ico;
-        }
-        location = /robots.txt {
-            rewrite (.*) /static/robots.txt;
-        }
 
         location / {
             proxy_pass_header Server;
