--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,22 +1,35 @@
-# -*- conf -*-
-[include]
-files = *.supervisor
-
-[supervisord]
+[unix_http_server]
+file=/tmp/supervisor.sock
 
 [supervisorctl]
-serverurl = unix://supervisord.sock
-
-[unix_http_server]
-file = supervisord.sock
+serverurl=unix:///tmp/supervisor.sock
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
+[supervisord]
+logfile = /tmp/supervisord.log
+logfile_maxbytes = 50MB
+logfile_backups=10
+loglevel = info
+pidfile = /tmp/supervisord.pid
+nodaemon = false
+minfds = 1024
+minprocs = 200
+umask = 022
+user = root
+identifier = supervisor
+directory = /tmp
+nocleanup = true
+childlogdir = /tmp
+strip_ansi = false
+
 [program:main]
-process_name = main-%(process_num)s
-command = python /srv/www/domain.com/tornado-linode/main.py
-	--port=%(process_num)s
-	--log_file_prefix=%(here)s/logs/%(program_name)s-%(process_num)s.log
-numprocs = 4
-numprocs_start = 8000
+numprocs=4
+numprocs_start=8000
+command=python /srv/www/tornado-linode/main.py --port=%(process_num)02d
+process_name = %(program_name)s_%(process_num)02d
+autorstart=true
+autorestart=true
+startsecs=10
+startretries=36
